--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.16.0",
     "@types/mysql": "^2.15.5",
     "@types/node-fetch": "^2.1.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
     "node-fetch": "^2.2.0"
