--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^3.4.4",
     "typescript": "^3.1.1"
   }
 }
